# study-cuda

./: README.md
simple1/: CMakeLists.txt  CudaDemo.cpp  CudaDemo.h  StudyOpenMp.cpp  StudyOpenMp.h  TorchTrt.cpp  TorchTrt.h  cudaopencv.cpp  cudaopencv.h  kernel_cuda_demo2.cu  kernel_ipl.cu  main.cpp
simple1/avx/: avx_main.cpp  common.cpp  common.h  study_avx.cpp  study_avx.h
simple1/cmake/: cuda_helps.cmake  test.cmake
simple1/cuda_extern/: a.cu  b.cu  b.h  readme.md
simple1/cuda_opencv/: Arguments.hpp  CudaDemo.cpp  CudaDemo.h  cudaopencv.h  kernel.cu  kernel_cuda_demo.cu  kernel_findoverlap.cu  kernel_gpu.cu  main.cpp  stu_Libtorch.cpp  swap_rb.cpp
